Fix Styling on Leaderboard and Deadlines

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
@@ -37,7 +37,7 @@
                                                 <thead>
                                                     <tr>
                                                         <th class="rank-col">#</th>
-                                                        <th>Player</th>
+                                                        <th class="player-name-col">Player</th>
                                                         <th class="points-col">Points</th>
                                                     </tr>
                                                 </thead>
@@ -46,7 +46,7 @@
                                                     {
                                                         <tr>
                                                             <td class="rank-col fw-bold">@entry.Rank</td>
-                                                            <td class="player-name-col">@entry.PlayerName</td>
+                                                            <td class="player-name-col fw-bold">@entry.PlayerName</td>
                                                             <td class="points-col fw-bold">@entry.TotalPoints</td>
                                                         </tr>
                                                     }
