--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/AvailableLeaguesTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/AvailableLeaguesTile.razor
@@ -29,10 +29,8 @@
                     <div class="action-card-body">
                         <div class="action-card-row action-card-row--centered">
                             <div class="badge-group badge-group--red">
-                                <span class="badge-icon">
-                                    <i class="bi bi-alarm"></i>
-                                </span>
-                                <span>Deadline: @league.EntryDeadline.ToString("dd MMM yyyy HH:mm")</span>
+                                <span class="badge-icon"><i class="bi bi-alarm"></i></span>
+                                <span>@league.EntryDeadline.ToString("dd MMM yyyy HH:mm")</span>
                             </div>
                         </div>
 
