--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/RoundCard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/RoundCard.razor
@@ -17,7 +17,7 @@
                 {
                     <div class="badge-group badge-group--red">
                         <span class="badge-icon" title="Deadline"><i class="bi bi-alarm"></i></span>
-                        <span>Deadline: @Round.Deadline.ToString("ddd dd MMM, HH:mm")</span>
+                        <span>@Round.Deadline.ToString("ddd dd MMM HH:mm")</span>
                     </div>
                 }
             </div>
