--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/Predictions.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/Predictions.razor
@@ -30,10 +30,8 @@
                 else
                 {
                     <div class="badge-group badge-group--red">
-                        <span class="badge-icon">
-                            <i class="bi bi-alarm"></i>
-                        </span>
-                        <span>Deadline: @_pageData.Deadline.ToString("dd MMM yyyy HH:mm")</span>
+                        <span class="badge-icon"><i class="bi bi-alarm"></i></span>
+                        <span>@_pageData.Deadline.ToString("dd MMM yyyy HH:mm")</span>
                     </div>
                 }
             </div>
@@ -50,10 +48,8 @@
                 else
                 {
                     <div class="badge-group badge-group--red">
-                        <span class="badge-icon">
-                            <i class="bi bi-alarm"></i>
-                        </span>
-                        <span>Deadline: @_pageData.Deadline.ToString("dd MMM yyyy HH:mm")</span>
+                        <span class="badge-icon"><i class="bi bi-alarm"></i></span>
+                        <span>@_pageData.Deadline.ToString("dd MMM yyyy HH:mm")</span>
                     </div>
                 }
             </div>
