--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Members.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Members.razor
@@ -1,5 +1,7 @@
 ﻿@page "/leagues/{LeagueId:int}/members"
 
+@attribute [Authorize]
+
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 
@@ -30,14 +32,14 @@
                         {
                             @foreach (var member in _leagueData.Members.Where(m => m.Status == LeagueMemberStatus.Pending))
                             {
-                                <div class="member-card">
-                                    <div>
-                                        <div class="fw-bold">@member.FullName</div>
-                                        <div class="small text-white-50">Joined: @member.JoinedAt.ToString("dd MMM yyyy")</div>
+                                <div class="action-card">
+                                    <div class="card-header">
+                                        <h5 class="fw-bold text-white">@member.FullName</h5>
+                                        <small class="text-white-50">Joined: @member.JoinedAt.ToString("dd MMM yyyy")</small>
                                     </div>
-                                    <div class="member-card-actions">
-                                        <button class="btn btn-sm red-button" @onclick="() => RejectMemberAsync(member.UserId)">Reject</button>
-                                        <button class="btn btn-sm green-button" @onclick="() => ApproveMemberAsync(member.UserId)">Approve</button>
+                                    <div class="action-card-footer">
+                                        <button class="btn btn-sm red-button" @onclick="() => RejectMemberAsync(member.UserId)"><i class="bi bi-x-circle me-2 fw-bold"></i>Reject</button>
+                                        <button class="btn btn-sm green-button" @onclick="() => ApproveMemberAsync(member.UserId)"><i class="bi bi-check-circle me-2 fw-bold"></i>Approve</button>
                                     </div>
                                 </div>
                             }
