--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/cards.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/cards.css
@@ -232,9 +232,6 @@
     color: white;
     display: flex;
     flex-direction: column;
-    flex-basis: 350px;
-    flex-grow: 1;
-    max-width: 350px;
 }
 
     .action-card.light {
@@ -332,5 +329,21 @@
     .action-card-footer .btn {
         font-size: 0.9rem;
         padding: 0.5rem 0.75rem;
+    }
+}
+
+@media (max-width: 768px){
+    .action-card {
+        max-width: 350px;
+    }
+
+    .member-card {
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+    }
+
+    .member-status-column h4{
+        text-align: center;
     }
 }
