--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -20,6 +20,7 @@
 @import url('pages/dashboard.css');
 @import url('pages/leaderboard.css');
 @import url('pages/predictions.css');
+@import url('pages/prizes.css');
 @import url('pages/results-grid.css');
 @import url('pages/user-list.css');
 
