--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/prizes.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/prizes.css
@@ -34,7 +34,6 @@
     display: flex;
     align-items: center;
     padding: 0.75rem 0;
-    border-bottom: 1px solid var(--pl-purple-700);
 }
 
     .prize-row:last-child {
@@ -44,7 +43,7 @@
 .prize-icon {
     flex: 0 0 40px;
     font-size: 1.5rem;
-    color: var(--pl-blue-light);
+    color: var(--pl-green);
 }
 
 .prize-description {
