Add Exact Scores Leaderboard

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/MyLeaguesTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/MyLeaguesTile.razor
@@ -44,7 +44,7 @@
                                 {
                                     var statusPillClass = league.Rank == 1 ? "badge-group--gold" : league.Rank <= 3 ? "badge-group--silver" : league.Rank <= 5 ? "badge-group--bronze" : "badge-group--blue";
 
-                                    <div class="badge-group @statusPillClass">
+                                    <div class="badge-group @statusPillClass ms-4">
                                         <span class="badge-icon" title="Rank"><i class="bi bi-trophy-fill"></i></span>
                                         <div class="position-info">
                                             <span>@league.Rank</span>
