--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
@@ -38,9 +38,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <h5 class="text-white">Correct Scores (Coming Soon)</h5>
-                    </div>
+                    <ExactScoresLeaderboardTile LeagueId="LeagueId" />
                 </div>
 
                 <div class="col-12 mb-4">
